# pythagoras-assessment

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/consumer/: consumer.rs  mod.rs  mongodb_consumer.rs  redis_consumer.rs
src/producer/: data_model.rs  mod.rs  okex_producer.rs
