[package]
name = "pythagoras-assessment"
version = "0.1.0"
authors = ["Marcus <marcuslimdw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
mongodb = { version = "2.0.0-beta", features = ["sync"], default-features = false }
redis = "0.20.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.13.0"
url = "2.2.2"

[dev-dependencies]
mockall = "0.9.1"
mockall_double = "0.2.0"
